// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// To update shakesapp.pb.go, run
// protoc --go_out=plugins=grpc:. shakesapp.proto --plugin=/path/to/protoc-gen-go

syntax = "proto3";

package shakesapp;

message ShakespeareResponse {
  // match_count is the number of matching lines.
  int64 match_count = 1;
}

message ShakespeareRequest {
  // query is a substring query.
  string query = 1;
}

service ShakespeareService {
  // Accepts a query string and returns the number of lines containing that.
  rpc GetMatchCount(ShakespeareRequest) returns (ShakespeareResponse) {}
}
